--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
       if (field.isException) {
         field.labelValue = field.labelValue || '';
       } else {
+        // Se estiver no grupo "Client Current Fees" e o campo (código 6,7,9) estiver vazio, forçamos o valor do tooltip
         if (
           feeGroup.name === "Client Current Fees" &&
           (field.code === 7 || field.code === 9 || field.code === 6) &&
@@ -30,10 +31,11 @@
           );
           if (corresponding) {
             if (field.code === 5) {
-              // Para código 5, sempre usamos o valor textual conforme vem do banco.
-              field.labelValue = field.defaultValue;
+              // Para o campo com código 5, sempre formatamos como moeda com "$" e duas casas decimais
+              const numValue = parseFloat(field.defaultValue);
+              field.labelValue = !isNaN(numValue) ? "$" + numValue.toFixed(2) : field.defaultValue;
             } else if (feeGroup.name === "Standard Fees" && field.code === 6) {
-              // Para BPS002 (código 6) no grupo Standard, usamos o valor extenso sem formatação.
+              // Para o grupo Standard Fees, se o campo é BPS002 (código 6), usamos o valor extenso exatamente como vem do banco
               field.labelValue = field.defaultValue;
             } else {
               const numValue = parseFloat(field.defaultValue);
